--- a/app/views/grants/show.html.erb
+++ b/app/views/grants/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Project:</b>
+  <%= @grant.project.name %>
+</p>
+
+<p>
   <b>Beg year:</b>
   <%= @grant.beg_year %>
 </p>
@@ -8,11 +13,6 @@
 <p>
   <b>End year:</b>
   <%= @grant.end_year %>
-</p>
-
-<p>
-  <b>Org:</b>
-  <%= @grant.org %>
 </p>
 
 <p>
