Change input fields for dates to use jquery datepicker; JS call for datepicker.

--- a/app/views/batches/_form.html.erb
+++ b/app/views/batches/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :date_beg_qc %><br />
-    <%= f.date_select :date_beg_qc %>
+    <%= f.text_field :date_beg_qc %>
   </div>
   <div class="field">
     <%= f.label :corrections_needed %><br />
@@ -37,11 +37,11 @@
   </div>
   <div class="field">
     <%= f.label :date_UCB_UCR %><br />
-    <%= f.date_select :date_UCB_UCR %>
+    <%= f.text_field :date_UCB_UCR %>
   </div>
   <div class="field">
     <%= f.label :date_UCR_LC %><br />
-    <%= f.date_select :date_UCR_LC %>
+    <%= f.text_field :date_UCR_LC %>
   </div>
   <div class="field">
     <%= f.label :LC_approve %><br />
