Use true/false -> yes/no initializer.

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -28,16 +28,16 @@
     <td><%= batch.name %></td>
     <td><%= batch.name_short %></td>
     <td><%= batch.date_beg_qc %></td>
-    <td><%= batch.corrections_needed %></td>
-    <td><%= batch.passed_validation %></td>
+    <td><%= batch.corrections_needed.yesno %></td>
+    <td><%= batch.passed_validation.yesno %></td>
     <td><%= batch.date_UCB_UCR %></td>
     <td><%= batch.date_UCR_LC %></td>
-    <td><%= batch.LC_approve %></td>
+    <td><%= batch.LC_approve.yesno %></td>
     <td><%= batch.valid_reels %></td>
     <td><%= batch.valid_issues %></td>
     <td><%= batch.size %></td>
     <td><%= batch.server_location %></td>
-    <td><%= batch.ingested %></td>
+    <td><%= batch.ingested.yesno %></td>
     <td><%= batch.notes %></td>
     <td><%= link_to 'Show', batch %></td>
     <td><%= link_to 'Edit', edit_batch_path(batch) %></td>
