--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -13,6 +13,7 @@
     <th>Lc approve</th>
     <th>Valid reels</th>
     <th>Valid issues</th>
+    <th>Number of TIFFs</th>
     <th>Size</th>
     <th>Server location</th>
     <th>Ingested</th>
@@ -35,6 +36,7 @@
     <td><%= batch.LC_approve.yesno %></td>
     <td><%= batch.valid_reels %></td>
     <td><%= batch.valid_issues %></td>
+    <td><%= batch.num_tiffs %></td>
     <td><%= batch.size %></td>
     <td><%= batch.server_location %></td>
     <td><%= batch.ingested.yesno %></td>
