DatePickered date fields in reels.

--- a/app/views/reels/_form.html.erb
+++ b/app/views/reels/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :start_date %><br />
-    <%= f.date_select :start_date %>
+    <%= f.text_field :start_date %>
   </div>
   <div class="field">
     <%= f.label :end_date %><br />
-    <%= f.date_select :end_date %>
+    <%= f.text_field :end_date %>
   </div>
   <div class="field">
     <%= f.label :reduction_ratio %><br />
@@ -45,7 +45,7 @@
   </div>
   <div class="field">
     <%= f.label :DateMicrofilmCreated %><br />
-    <%= f.date_select :DateMicrofilmCreated %>
+    <%= f.text_field :DateMicrofilmCreated %>
   </div>
   <div class="field">
     <%= f.label :LooseLeavesFlag %><br />
