Tranlsate true/false to yes/no on reels views.

--- a/app/views/reels/index.html.erb
+++ b/app/views/reels/index.html.erb
@@ -45,11 +45,11 @@
     <td><%= reel.reduction_ratio %></td>
     <td><%= reel.CaptureResolutionOriginal %></td>
     <td><%= reel.CaptureResolutionFilm %></td>
-    <td><%= reel.GuideToContentsPresentFlag %></td>
+    <td><%= reel.GuideToContentsPresentFlag.yesno %></td>
     <td><%= reel.GuideToContentsString %></td>
     <td><%= reel.DateMicrofilmCreated %></td>
-    <td><%= reel.LooseLeavesFlag %></td>
-    <td><%= reel.BoundVolumeFlag %></td>
+    <td><%= reel.LooseLeavesFlag.yesno %></td>
+    <td><%= reel.BoundVolumeFlag.yesno %></td>
     <td><%= reel.Comments %></td>
     <td><%= reel.Dimensions %></td>
     <td><%= reel.PagesPerIssue %></td>
