--- a/app/views/reels/show.html.erb
+++ b/app/views/reels/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <b>Guidetocontentspresentflag:</b>
-  <%= @reel.GuideToContentsPresentFlag %>
+  <%= @reel.GuideToContentsPresentFlag.yesno %>
 </p>
 
 <p>
@@ -47,12 +47,12 @@
 
 <p>
   <b>Looseleavesflag:</b>
-  <%= @reel.LooseLeavesFlag %>
+  <%= @reel.LooseLeavesFlag.yesno %>
 </p>
 
 <p>
   <b>Boundvolumeflag:</b>
-  <%= @reel.BoundVolumeFlag %>
+  <%= @reel.BoundVolumeFlag.yesno %>
 </p>
 
 <p>
