--- a/app/views/reels/show.html.erb
+++ b/app/views/reels/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Batch:</b>
+  <%= @reel.batch.name_short %>
+</p>
+
+<p>
   <b>Number:</b>
   <%= @reel.number %>
 </p>
