--- a/app/views/titles/show.html.erb
+++ b/app/views/titles/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Abrrv. Title:</b>
+  <%= @title.abbrv_title.name %>
+</p>
+
+<p>
   <b>Lccn:</b>
   <%= @title.lccn %>
 </p>
