--- a/app/views/titles/index.html.erb
+++ b/app/views/titles/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Abbrv. Title</th>
     <th>Lccn</th>
     <th>Title</th>
     <th>City publication</th>
@@ -15,6 +16,7 @@
 
 <% @titles.each do |title| %>
   <tr>
+    <td><%= title.abbrv_title.name %></td>
     <td><%= title.lccn %></td>
     <td><%= title.title %></td>
     <td><%= title.city_publication %></td>
