--- a/app/views/reels/_form.html.erb
+++ b/app/views/reels/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@reel) do |f| %>
+<%= nested_form_for(@reel) do |f| %>
   <% if @reel.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@reel.errors.count, "error") %> prohibited this reel from being saved:</h2>
@@ -27,6 +27,9 @@
     <%= f.label :end_date %><br />
     <%= f.text_field :end_date %>
   </div>
+  
+  <%= render 'titles', :f => f %>
+
   <div class="field">
     <%= f.label :reduction_ratio %><br />
     <%= f.text_field :reduction_ratio %>
