Instead of dyn-creating a title, dyn-add existing title(s).

--- a/app/views/reels/_form.html.erb
+++ b/app/views/reels/_form.html.erb
@@ -28,7 +28,7 @@
     <%= f.text_field :end_date %>
   </div>
   
-  <%= render 'titles', :f => f %>
+  <%= render 'reel_titles', :f => f %>
 
   <div class="field">
     <%= f.label :reduction_ratio %><br />
