--- a/app/views/reels/_titles.html.erb
+++ b/app/views/reels/_titles.html.erb
@@ -1,35 +1,6 @@
-<div id="titles">
-  <h2>Titles on this reel</h2>
-    <table>
-      <tr>
-        <th>Abbrv. Title</th>
-        <th>Lccn</th>
-        <th>Title</th>
-        <th>City publication</th>
-        <th>Beg date</th>
-        <th>End date</th>
-        <th>Issue edition pattern</th>
-      </tr>
-
-    <% @reel.titles.each do |title| %>
-      <tr>
-        <td><%= title.abbrv_title.name %></td>
-        <td><%= title.lccn %></td>
-        <td><%= title.title %></td>
-        <td><%= title.city_publication %></td>
-        <td><%= title.beg_date %></td>
-        <td><%= title.end_date %></td>
-        <td><%= title.issue_edition_pattern %></td>
-      </tr>
-    <% end %>
-    </table>
-
-    <br />
-    
-    <%= f.fields_for :titles do |builder| %>
-      <%= render "titles/title_fields", :f => builder %>
-    <% end %>
-
-    <p><%= f.link_to_add 'Add a title to this reel', :titles %></p>
-  
+<div class="titles">
+  <div class="field">
+    <%= f.label :title_id %><br />
+    <%= f.collection_select :title_id, Title.all, :id, :lccn, :prompt => "Select a title:" %>
+  </div>
 </div>
