--- a/app/views/titles/_title_fields.html.erb
+++ b/app/views/titles/_title_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="field">
   <%= f.label :abbrv_title_id %><br />
-  <%= f.collection_select :abbrv_title_id, AbbrvTitle.order("name ASC"), :id, :name, :prompt => "Select a title:" %>
+  <%= f.collection_select :abbrv_title_id, AbbrvTitle.order("name ASC"), :id, :name, :prompt => "Select an abbreviation:" %>
 </div>
 <div class="field">
   <%= f.label :lccn %><br />
