--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -8,7 +8,7 @@
     <th>Date beg qc</th>
     <th>Corrections needed</th>
     <th>Passed validation</th>
-    <th>Date ucb ucr</th>
+    <th>Date UCR Received</th>
     <th>Date ucr lc</th>
     <th>Lc approve</th>
     <th>Valid reels</th>
@@ -31,7 +31,7 @@
     <td><%= batch.date_beg_qc %></td>
     <td><%= batch.corrections_needed.yesno %></td>
     <td><%= batch.passed_validation.yesno %></td>
-    <td><%= batch.date_UCB_UCR %></td>
+    <td><%= batch.date_ucr_recvd %></td>
     <td><%= batch.date_UCR_LC %></td>
     <td><%= batch.LC_approve.yesno %></td>
     <td><%= batch.valid_reels %></td>
