Add embargo date field to displays; move fields around on displays.

--- a/app/views/batches/_form.html.erb
+++ b/app/views/batches/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_field :date_ucr_recvd %>
   </div>
   <div class="field">
+    <%= f.label :embargo_end_date %><br />
+    <%= f.text_field :embargo_end_date %>
+  </div>
+  <div class="field">
     <%= f.label :date_beg_qc %><br />
     <%= f.text_field :date_beg_qc %>
   </div>
