--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -5,10 +5,11 @@
 	<th>Grant</th>
     <th>Name</th>
     <th>Name short</th>
+    <th>Date UCR Received</th>
+    <th>Date Embargo Ends</th>
     <th>Date beg qc</th>
     <th>Corrections needed</th>
     <th>Passed validation</th>
-    <th>Date UCR Received</th>
     <th>Date ucr lc</th>
     <th>Lc approve</th>
     <th>Valid reels</th>
@@ -28,10 +29,11 @@
 	<td><%= batch.grant.display %></td>
     <td><%= batch.name %></td>
     <td><%= batch.name_short %></td>
+    <td><%= batch.date_ucr_recvd %></td>
+    <td><%= batch.embargo_end_date %></td>
     <td><%= batch.date_beg_qc %></td>
     <td><%= batch.corrections_needed.yesno %></td>
     <td><%= batch.passed_validation.yesno %></td>
-    <td><%= batch.date_ucr_recvd %></td>
     <td><%= batch.date_UCR_LC %></td>
     <td><%= batch.LC_approve.yesno %></td>
     <td><%= batch.valid_reels %></td>
