--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -6,18 +6,23 @@
 </p>
 
 <p>
-  <b>Name:</b>
+  <b>Batch Name:</b>
   <%= @batch.name %>
 </p>
 
 <p>
-  <b>Name short:</b>
+  <b>Batch Short Name:</b>
   <%= @batch.name_short %>
 </p>
 
 <p>
   <b>Date UCR Received:</b>
   <%= @batch.date_ucr_recvd %>
+</p>
+
+<p>
+  <b>Date Embargo Ends:</b>
+  <%= @batch.embargo_end_date %>
 </p>
 
 <p>
