--- a/app/views/reels/_titles.html.erb
+++ b/app/views/reels/_titles.html.erb
@@ -1,6 +1,6 @@
 <div class="titles">
   <div class="field">
     <%= f.label :title_id %><br />
-    <%= f.collection_select :title_id, Title.all, :id, :lccn, :prompt => "Select a title:" %>
+    <%= f.select :title_id, options_for_select(Title.joins(:abbrv_title).order('abbrv_titles.name').all.map { |t| [  t.abbrv_title.name + " - " + t.lccn.to_s, t.id ] } ), :prompt => "Select a title:" %>
   </div>
 </div>
